# flipperzero-rs

./: .gitignore  CHANGELOG.md  README.md  flake.nix
.github/workflows/: _build_and_test.yml  _lints.yml  update_bindings.yml
crates/: Cargo.toml  build-examples.py  rust-toolchain.toml
crates/.cargo/: config.toml
crates/alloc/: Cargo.toml
crates/alloc/src/: lib.rs
crates/flipperzero/: Cargo.toml
crates/flipperzero/examples/: ble-serial-echo.rs  embedded-graphics.rs  gui.rs  images.rs  notification.rs  serial-echo.rs  storage.rs  variable_item_list.rs  view_dispatcher.rs  view_dispatcher_new.rs
crates/flipperzero/src/: cdc.rs  datetime.rs  internals.rs  io.rs  lib.rs  locale.rs  path.rs  prelude.rs  serial.rs  storage.rs  version.rs
crates/flipperzero/src/bluetooth/: beacon.rs  mod.rs  serial.rs
crates/flipperzero/src/dialogs/: mod.rs
crates/flipperzero/src/dolphin/: deed.rs
crates/flipperzero/src/furi/: event_flag.rs  hal.rs  io.rs  kernel.rs  message_queue.rs  mod.rs  rng.rs  string.rs  thread.rs
crates/flipperzero/src/furi/hal/: rtc.rs  version.rs
crates/flipperzero/src/furi/log/: metadata.rs  mod.rs
crates/flipperzero/src/gpio/: i2c.rs  mod.rs
crates/flipperzero/src/gui/: canvas.rs  gui_layer.rs  icon.rs  icon_animation.rs  mod.rs  submenu.rs  variable_item_list.rs  view.rs  xbm.rs
crates/flipperzero/src/gui/canvas/: align.rs  canvas_direction.rs  color.rs  font.rs  mod.rs
crates/flipperzero/src/gui/view_dispatcher/: mod.rs  type.rs
crates/flipperzero/src/gui/view_port/: mod.rs  orientation.rs
crates/flipperzero/src/input/: key.rs  mod.rs  type.rs
crates/flipperzero/src/notification/: backlight.rs  feedback.rs  led.rs  mod.rs  sounds.rs  vibro.rs
crates/flipperzero/tests/: string.rs
crates/rt/: Cargo.toml
crates/rt/src/: lib.rs  panic_handler.rs
crates/sys/: Cargo.toml  build.rs
crates/sys/src/: bindings.rs  furi.rs  lib.rs  miri_bindings.rs
crates/sys/src/furi/: alloc.rs  status.rs
crates/sys/src/miri_bindings/: event.rs  gui.rs  input.rs  kernel.rs  mutex.rs  string.rs  thread.rs  utils.rs  version.rs
crates/sys/src/miri_bindings/gui/: canvas.rs  icon.rs  submenu.rs  text_input.rs  variable_item_list.rs  view.rs  view_dispatcher.rs  view_port.rs  widget.rs
crates/sys/src/miri_bindings/sync/: mod.rs  mpsc.rs
crates/test/: Cargo.toml
crates/test/macros/: Cargo.toml
crates/test/macros/src/: deassert.rs  lib.rs
crates/test/src/: lib.rs
tools/: Cargo.toml  update-sdk-bindings.sh
tools/src/: serial.rs  storage.rs
