[package]
name = "flipperzero-tools"
description = "Rust for Flipper Zero (tools)"
license = "MIT"
version = "0.15.0"
edition = "2024"

[dependencies]
bytes = "1.5"
clap = { version = "4.4", features = ["cargo", "derive"] }
crossterm = "0.29"
csv = "1.3"
doxygen-rs = "0.4.2"
elf = "0.8.0"
hex = "0.4.3"
md-5 = "0.10.6"
once_cell = "1.19"
rand = "0.9.2"
regex = "1.10"
serialport = "4.3"
tempfile = "3.8"
which = "8.0"
