[package]
name = "flipperzero"
version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
autobins = false
autotests = false
autobenches = false

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = []
all-features = true

[lib]
bench = false
harness = false
doctest = false

[dependencies]
flipperzero-sys.workspace = true
flipperzero-test.workspace = true
ufmt.workspace = true

# HAL wrappers
rand_core = "0.6"

# Furi wrappers
lock_api = "0.4"

uuid = { version = "1.16", default-features = false }

# Toolbox
digest = "0.10"
bitflags = "2.4"

# Embedded-hal
embedded-hal = { version = "1.0.0-rc.1", optional = true }
embedded-hal-0 = { package = "embedded-hal", version = "0.2.7", features = [
    "unproven",
], optional = true }

# Embedded-graphics support
embedded-graphics-core = { version = "0.4.0", optional = true }

# Docs
document-features = { workspace = true, optional = true }

[dev-dependencies]
flipperzero-alloc.workspace = true
flipperzero-rt.workspace = true
embedded-graphics = "0.8.0"

# Toolbox
crc32fast = { version = "1", default-features = false }

# Not needed as for now since the corresponsing APIs have been made private in flipperzero-firmware
#md-5 = { version = "0.10", default-features = false }
#sha2 = { version = "0.10", default-features = false }

[features]

default = ["embedded-graphics", "not-miri"]
miri = ["embedded-graphics"]

#! ## Core features

## Enables features requiring an allocator.
##
## This will require you to set the global allocator
## by importing the `flipperzero_alloc`:
##
## ```
## extern crate alloc;
## extern crate flipperzero_alloc;
## ```
alloc = []
not-miri = []

#! ## Utilities
#!
#! These APIs provide extra functionality required for specific use-cases.

## Enables APIs for working with XBM-images.
xbm = []

## Enable embedded-graphics driver
embedded-graphics = ["dep:embedded-graphics-core"]

[lints.rust]
rust_2024_compatibility = "warn"
edition_2024_expr_fragment_specifier = "allow"

[[test]]
name = "dolphin"
harness = false
required-features = ["not-miri"]

[[test]]
name = "string"
harness = false
required-features = ["not-miri"]

[[example]]
name = "bluetooth"
required-features = ["not-miri"]

[[example]]
name = "dialog"
required-features = ["alloc", "not-miri"]

[[example]]
name = "embedded-graphics"
required-features = ["embedded-graphics", "not-miri"]

[[example]]
name = "gpio"
required-features = ["not-miri"]

[[example]]
name = "gui"

[[example]]
name = "hello-rust"
required-features = ["not-miri"]

[[example]]
name = "i2c-ds3231"
required-features = ["not-miri"]

[[example]]
name = "images"
required-features = ["not-miri"]

[[example]]
name = "notification"
required-features = ["not-miri"]

[[example]]
name = "serial-echo"
required-features = ["not-miri"]

[[example]]
name = "storage"
required-features = ["not-miri"]

[[example]]
name = "stream_buffer"
required-features = ["alloc", "not-miri"]

[[example]]
name = "threads"
required-features = ["alloc", "not-miri"]

[[example]]
name = "view_dispatcher"
