[package]
name = "flipperzero-sys"
version.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
autobins = false
autoexamples = false
autotests = false
autobenches = false

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
targets = []
all-features = true

[lib]
bench = false
test = false
doctest = false

[dependencies]
ufmt.workspace = true

[build-dependencies]
bindgen = "0.72.1"
csv = "1.1.6"
dirs = "6.0.0"
doxygen-rs = "0.4.2"
regex = "1.10"
serde_json = "1.0.91"
shlex = "1.1.0"

[lints.rust]
rust_2024_compatibility = "warn"
edition_2024_expr_fragment_specifier = "allow"
